--- a/src/app/blogs/[slug]/page.module.css
+++ b/src/app/blogs/[slug]/page.module.css
@@ -22,13 +22,13 @@
    background-color: var(--gray);
 }
 
-
-
 .article {
    width: 100%;
    max-width: 1024px;
    padding: 2em 3em 2em 3em;
    height: 100%;
+   display: flex;
+   flex-direction: column;
    background-color: rgb(0, 0, 0);
    letter-spacing: unset;
    color: rgb(209, 204, 204);
@@ -39,9 +39,9 @@
 }
 
 .article img {
-   width: 100%;
+   width: 70% !important;
    border: 1px solid var(--gray);
-   border-radius: 8px;
+   border-radius: 7px;
 }
 
 .meta {
