--- a/src/app/components/loadingPage/index.module.css
+++ b/src/app/components/loadingPage/index.module.css
@@ -4,7 +4,7 @@
    justify-content: center;
    align-items: center;
    height: 100vh;
-   background-color: rgb(0, 0, 0);
+   background-color: rgba(0, 0, 0, 0);
 }
 
 .loadingContainer svg {
