--- a/src/app/components/Main/index.module.css
+++ b/src/app/components/Main/index.module.css
@@ -45,36 +45,29 @@
 
 .main {
    padding: 0.8em;
-   border-radius: 16px;
-   aspect-ratio: 12/38;
+   aspect-ratio: 12/25;
    width: var(--size);
    display: grid;
    grid-template-columns: repeat(12, 1fr);
-   grid-template-rows: repeat(38, 2fr);
+   grid-template-rows: repeat(25, 2fr);
    gap: 0.5em;
    grid-template-areas:
       " A A A A A A A A A A A A "
-      " A A A A A A A A A A A A "
+      
 
-      " B B B B B B B B B B B B "
-      " B B B B B B B B B B B B "
-      " B B B B B B B B B B B B "
-      " B B B B B B B B B B B B "
+      " B B B B B B B C C C C C "
+      " B B B B B B B C C C C C "
+      " B B B B B B B C C C C C "
+      " B B B B B B B C C C C C "
 
-      " C C C C C C C C C C C C "
-      " C C C C C C C C C C C C "
-      " C C C C C C C C C C C C "
-      " C C C C C C C C C C C C "
-      " C C C C C C C C C C C C "
 
-      " D D D D D D D D D D D D "
-      " D D D D D D D D D D D D "
-      " D D D D D D D D D D D D "
-      " D D D D D D D D D D D D "
-      " D D D D D D D D D D D D "
-      " D D D D D D D D D D D D "
-      " D D D D D D D D D D D D "
-      " D D D D D D D D D D D D "
+      " D D D D D D D C C C C C "
+      " D D D D D D D C C C C C "
+      " D D D D D D D C C C C C "
+      
+      " D D D D D D D C C C C C "
+      " D D D D D D D C C C C C "
+   
 
 
       " H H H H H H H H H H H H "
@@ -89,16 +82,13 @@
       " E E E E E E E E E E E E "
       " E E E E E E E E E E E E "
       " E E E E E E E E E E E E "
-      " E E E E E E E E E E E E "
-      " E E E E E E E E E E E E "
-      " E E E E E E E E E E E E "
 
       " F F F F F F F F F F F F "
       " F F F F F F F F F F F F "
       " F F F F F F F F F F F F "
 
-      " G G G G G G G G G G G G "
       " G G G G G G G G G G G G ";
+
    position: relative
 }
 
