--- a/src/app/components/loadingPage/index.module.css
+++ b/src/app/components/loadingPage/index.module.css
@@ -3,15 +3,21 @@
    flex-direction: column;
    justify-content: center;
    align-items: center;
-   height: 100vh;
+   height: 100%; width: 100%;
    background-color: rgb(0, 0, 0);
 }
 
 .loadingContainer svg {
-   width: 70px;
-   height: 70px;
    color: rgb(255, 255, 255);
+   fill: white;
    animation: rotation 1000ms ease-in-out infinite;
+}
+
+.svgWrapper {
+   width: 80px;
+   height: 80px;
+   display: block;
+   position: fixed;
 }
 
 @keyframes rotation {
