--- a/src/app/components/Background/index.module.css
+++ b/src/app/components/Background/index.module.css
@@ -1,34 +1,53 @@
-.container {
-   position: fixed;
-   top: 0;
-   left: 0;
-   width: 0;
-   height: 0;
-   background-color: rgb(0, 0, 0);
-   visibility: hidden;
-}
-
-@media screen and (min-width: 1024px) {
    .container {
       position: fixed;
-      visibility: visible !important;
+      visibility: visible;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      height: 100svh;
+      width: 0vw;
+      height: 0vh;
+      height: 0svh;
       z-index: -1;
       overflow: hidden;
    }
 
-   .container:after {
-      width: 100%;
-      content: '';
-      height: 100%;
+   .canvas {
+      position: fixed;
       top: 0;
       left: 0;
-      position: absolute;
-      background: linear-gradient(to left, #000 10%, transparent 50%, #000 90%);
+      width: 100vw;
+      height: 100vh;
+      background-color: '#000';
    }
 
-}
+
+   @media screen and (min-width: 1024px) {
+
+      .container {
+         position: fixed;
+         visibility: visible !important;
+         top: 0;
+         left: 0;
+         width: 100vw;
+         height: 100vh;
+         height: 100svh;
+      }
+
+      .canvas {
+         position: fixed;
+         top: 0;
+         left: 0;
+         width: 0vw;
+         height: 0vh;
+      }
+
+      .container:after {
+         width: 100%;
+         content: '';
+         height: 100%;
+         top: 0;
+         left: 0;
+         position: absolute;
+         background: linear-gradient(to left, #000 10%, transparent 50%, #000 90%);
+      }
+
+   }
