--- a/src/app/components/loadingPage/index.module.css
+++ b/src/app/components/loadingPage/index.module.css
@@ -26,9 +26,12 @@
       fill: rgb(0, 0, 0);
    }
    20% {
-      fill: rgb(255, 255, 255);
+      fill: rgb(0, 0, 0);
    }
-   80% {
+   50% {
+      fill: white;
+   }
+   70% {
       fill: rgb(255, 255, 255);
    }
    100% {
