--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -90,3 +90,7 @@ body::-webkit-scrollbar-track {
 body::-webkit-scrollbar-thumb {
    background-color: var(--gray);
 }
+
+body.no-scroll {
+  overflow: hidden;
+}
