--- a/src/app/components/MarkdownOverrides/index.module.css
+++ b/src/app/components/MarkdownOverrides/index.module.css
@@ -4,6 +4,7 @@
    border-radius: 7px;
    scrollbar-width: 8px;
    scrollbar-color: var(--gray) black;
+   font-family: var(--font-geist-mono);
 }
 
 .wrapper::-webkit-scrollbar {
@@ -18,4 +19,3 @@
 .wrapper::-webkit-scrollbar-thumb {
    background-color: var(--gray);
 }
-
