--- a/src/app/components/Popup/index.module.css
+++ b/src/app/components/Popup/index.module.css
@@ -1,18 +1,15 @@
-
 .overlay {
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
   z-index: 1000;
   width: 100vw;
   height: 100vh;
   min-width: 100%;
-  backdrop-filter: blur(0.5em);
+  backdrop-filter: blur(1em);
+  background-color: rgba(0, 0, 0, 0.713);
 }
 
 .popup {
