--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,6 +1,3 @@
-
-
-
 :root {
   --black: #000;
   --white: #fff;
@@ -31,6 +28,8 @@ html {
   height: 100%;
   padding: 0;
   margin: 0;
+
+  scrollbar-gutter: stable;
 }
 
 p {
@@ -46,7 +45,7 @@ a {
   text-decoration: none;
 }
 
-a:hover{
+a:hover {
   color: white;
 }
 
@@ -74,7 +73,8 @@ a:hover{
 .content-container {
   /* Animation styles */
   opacity: 1;
-  transition: opacity 0.5s ease-in-out 0.4s; /* Delay the fade-in slightly */
+  transition: opacity 0.5s ease-in-out 0.4s;
+  /* Delay the fade-in slightly */
 }
 
 .content-container.hidden {
@@ -85,18 +85,19 @@ a:hover{
 ::-webkit-scrollbar {
   width: auto;
 }
+
 ::-webkit-scrollbar-track {
-   background: rgba(0, 0, 0, 0);
+  background: rgba(0, 0, 0, 0);
 }
 
 ::-webkit-scrollbar-thumb {
-   background-color: var(--border);
-   border-radius: 600px;
+  background-color: var(--border);
+  border-radius: 600px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-   background-color: var(--gray);
-   border-radius: 600px;
+  background-color: var(--gray);
+  border-radius: 600px;
 }
 
 body.no-scroll {
