--- a/src/app/submit/page.module.css
+++ b/src/app/submit/page.module.css
@@ -1,9 +1,23 @@
-
+.pageContainer {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100%;
+  letter-spacing: 0rem;
+}
 
 .wrapper {
   padding: 1rem;
   max-width: 768px;
   margin: 0 auto;
+  width: 100%;
+}
+
+.pageContainer h1 {
+  color: var(--text);
+  font-family: var(--font-serif);
+  font-weight: 400;
+  font-size: 3rem;
 }
 
 .frontmatter {
@@ -15,21 +29,80 @@
   font-size: 0.875rem;
   margin-bottom: 1rem;
   resize: vertical;
+  font-family: var(--font-geist-sans);
+  line-height: 1.2rem;
+  
 }
+
+.frontmatter:focus {
+  border: 1px solid blue;
+  outline: 1px solid blue
+}
+
 
 .toolbar {
   display: flex;
   flex-wrap: wrap;
   gap: 0.5rem;
-  margin-bottom: 1rem;
+  margin: 0.5rem 0.5rem 1rem 0.5rem;
   align-items: center;
+  border-bottom: 1px solid var(--border);
+  padding: 0.5rem 1rem 1rem 1rem;
 }
 
-.toolbar button {
-   color: red;
-   background: var(--card-bg);
-   padding: 0.4rem;
-   
+.toolbarButton {
+  color: var(--gray);
+  background: var(--card-bg);
+  padding: 0.4rem;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+}
+
+.activeToolbarButton {
+  color: var(--text);
+  background: var(--card-bg);
+  padding: 0.4rem;
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border-radius: 4px;
+}
+
+.wrapper textarea {
+  resize: none;
+}
+
+.uploadLabel {
+  color: var(--text);
+  padding: 0 0.5rem;
+  vertical-align: auto;
+}
+
+.toolbar select {
+  background-color: var(--card-bg);
+  color: var(--text);
+  padding: 0.4rem 1rem 0.4rem 0.5rem;
+  border: 1px solid var(--border);
+  border-radius: 4px;
+  
+  font-family: var(--font-geist-sans);
+}
+
+.toolbar option{
+  border-radius: 0px !important;
+}
+
+.contentArea {
+  border: 1px solid var(--gray);
+  border-radius: 7px;
+  overflow: hidden;
+}
+
+.contentArea:focus {
+  border: 1px solid blue;
+  outline: 1px solid blue
 }
 
 .uploadLabel {
@@ -50,16 +123,57 @@
 }
 
 .editor {
-  border: 1px solid var(--gray);
-  padding: 1rem;
-  border-radius: 7px;
+  padding: 0rem 1rem;
   min-height: 300px;
+  width: 100%;
+  color: var(--text);
+  font-family: var(--font-geist-sans);
 }
+
 
 .preview {
   border: 1px solid #d1d5db;
   padding: 1rem;
-  border-radius: 7px;
+  color: var(--text);
   max-width: none;
-  background-color: #ff0000;
+  background-color: #000000;
+}
+
+.submitButton {
+  display: flex;
+  background-color: var(--card-bg);
+  border: 1px solid var(--border);
+  padding: 0.5rem ;
+  justify-content: center;
+  align-items: center;
+  width: 90px;
+  margin: 1rem 0;
+}
+
+.tiptapContent{
+  border: none;
+  outline: none;
+  font-family: var(--font-geist-sans);
+  font-feature-settings: 'ss06' on, 'ss05' on, 'ss08' on;
+}
+
+.tiptapContent pre code {
+  font-family: var(--font-geist-mono);
+  border: 1px solid var(--border);
+  width: 100%;
+  display: flex;
+  padding: 0.2em 0.5em;
+}
+
+.tiptapContent code {
+  font-family: var(--font-geist-mono);
+  border: 1px solid var(--border);
+  padding: 0.2em 0.5em;
+}
+
+.tiptapContent img {
+  max-width: 40%;
+  height: auto;
+  display: block; /* Optional: Prevents extra space below the image */
+  border-radius: 8px; 
 }
