--- a/src/app/login/page.module.css
+++ b/src/app/login/page.module.css
@@ -34,8 +34,11 @@
 }
 
 .loginWrapper p {
-   font-family: var(--font-pecita);
-   font-size: 1.6em;
+   font-size: 1rem;
+   background-color: rgba(255, 0, 0, 0.291);
+   padding: 0.7rem;
+   border-radius: 4px;
+   border: 1px solid rgba(255, 0, 0, 0.46);
 }
 
 .loginWrapper form {
@@ -47,11 +50,13 @@
 
 .loginWrapper input {
    padding: 1em;
-   width: 100%;
+   width: 50%;
    text-align: center;
    background-color: var(--card-bg);
    border: 1px solid var(--border);
-   border-radius: 4px
+   border-radius: 4px;
+   margin-bottom: 1rem;
+   font-family: var(--font-geist-mono);
 }
 
 .loginWrapper button {
