--- a/src/app/components/Main/index.module.css
+++ b/src/app/components/Main/index.module.css
@@ -245,17 +245,15 @@
    padding: 0em 0em 0em 0.5em !important;
 }
 
-.cv .content>h3 {
-   text-decoration: none;
-   font-size: 1em;
-   color: white;
-   font-weight: 400;
-   width: 100%;
-   height: 1.2em;
-   margin: 0em;
-   text-align: left;
+.cv .content h3 {
+   padding: 0 0.2em;
    position: relative;
    overflow: hidden;
+   color: white;
+   font-size: 1em;
+   font-weight: 400;
+   height: 1.4em;
+   margin: 0;
 }
 
 /** ---- CV END ---- */
