--- a/src/app/components/Popup/index.module.css
+++ b/src/app/components/Popup/index.module.css
@@ -10,6 +10,7 @@
   min-width: 100%;
   backdrop-filter: blur(1em);
   background-color: rgba(0, 0, 0, 0.713);
+  justify-content: space-around;
 }
 
 .popup {
