fixed layout issues

--- a/src/app/components/Background/index.module.css
+++ b/src/app/components/Background/index.module.css
@@ -1,53 +1,41 @@
+   .canvas {
+      position: fixed;
+      visibility: visible;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+   }
+
    .container {
       position: fixed;
       visibility: visible;
       top: 0;
       left: 0;
-      width: 0vw;
-      height: 0vh;
-      height: 0svh;
+      width: 100vw;
+      height: 100vh;
+      height: 100svh;
       z-index: -1;
       overflow: hidden;
    }
 
-   .canvas {
-      position: fixed;
+   .container:after {
+      width: 100%;
+      content: '';
+      height: 100%;
       top: 0;
       left: 0;
-      width: 100vw;
-      height: 100vh;
-      background-color: '#000';
+      position: absolute;
+      background: linear-gradient(to left, #000 10%, transparent 50%, #000 90%);
    }
 
 
-   @media screen and (min-width: 1024px) {
-
-      .container {
-         position: fixed;
-         visibility: visible !important;
-         top: 0;
-         left: 0;
-         width: 100vw;
-         height: 100vh;
-         height: 100svh;
-      }
-
+   @media screen and (max-width: 1024px) {
       .canvas {
-         position: fixed;
-         top: 0;
-         left: 0;
-         width: 0vw;
+         width: 0;
          height: 0vh;
+         height: 0svh;
+         z-index: -1;
+         overflow: hidden;
       }
-
-      .container:after {
-         width: 100%;
-         content: '';
-         height: 100%;
-         top: 0;
-         left: 0;
-         position: absolute;
-         background: linear-gradient(to left, #000 10%, transparent 50%, #000 90%);
-      }
-
    }
