--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,23 +13,22 @@
 
 body {
   background-color: var(--black);
-  padding: 0;
   margin: 0;
-  display: flex;
-  flex-direction: column;
+  align-items: center;
+  letter-spacing: -0.1em;
   font-family: var(--font-geist-sans), sans-serif;
   font-feature-settings: 'ss06' on, 'ss05' on, 'ss08' on;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  letter-spacing: -0.1em;
+  
+
+  scrollbar-gutter: stable;
 }
 
 html {
   height: 100%;
   padding: 0;
   margin: 0;
-
-  scrollbar-gutter: stable;
 }
 
 p {
@@ -83,7 +82,7 @@ a:hover {
 }
 
 ::-webkit-scrollbar {
-  width: auto;
+  width: 0;
 }
 
 ::-webkit-scrollbar-track {
