--- a/src/app/blogs/[slug]/page.module.css
+++ b/src/app/blogs/[slug]/page.module.css
@@ -1,7 +1,7 @@
 .container {
    background-color: rgb(0, 0, 0);
    width: 100%;
-   height: 100%;
+   height: auto;
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -26,7 +26,7 @@
    width: 100%;
    max-width: 1024px;
    padding: 2em 3em 2em 3em;
-   height: 100%;
+   height: auto;
    display: flex;
    flex-direction: column;
    background-color: rgb(0, 0, 0);
@@ -100,8 +100,7 @@
 .container hr {
    width: 100%;
    margin: 1.4em 0em 0em 0em;
-   color: transparent;
-   border-bottom: 1px solid var(--gray);
+   border: 1px solid var(--border);
 }
 
 .article h1 {
@@ -143,4 +142,7 @@
 .container>div:last-child span {
    font-family: var(--font-serif), serif;
    font-size: 1.5em;
+}
+
+.footer {
 }
